k8s/elk/logstash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
      - name: logstash
        image: docker.elastic.co/logstash/logstash:8.7.0
        command: ["logstash", "-e", ""]  # Empty pipeline
        ports:
        - containerPort: 5044
        volumeMounts:
        - name: logstash-pipeline
          mountPath: /usr/share/logstash/pipeline
        resources:
          limits:
            memory: "712Mi"
      volumes:
        - name: logstash-pipeline
          configMap:
            name: logstash-pipeline

---
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: monitoring
spec:
  selector:
    app: logstash
  ports:
  - port: 5044
