k8s/elk/kibana-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kibana
  namespace: monitoring
spec:
  host: kibana.local
  to:
    kind: Service
    name: kibana
  port:
    targetPort: 5601
